hphp/hack/test/typecheck/references/refs_in_array/binding_new_element2.php.exp
File "binding_new_element2.php", line 6, characters 11-12:
References are only permitted as function call arguments. (Parsing[1002])
